fix mobile stretch

--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,10 +1,11 @@
-.details {
-    min-height: auto;
-}
+/* .details {
+    min-height: fit-content;
+} */
 
 .details__header {
     display: flex;
     position: relative;
+    max-height: fit-content;
 }
 
 .details__header--img {
